--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <nav>
           <h2 class="hide">메뉴</h2>
           <ul class="icon-group">
-            <li class="icon icon1" data-filter="t-shirt">
-              <img src="./img/blue_t.png" alt="t-shirt button" />
+            <li class="icon icon1" >
+              <img src="./img/blue_t.png" alt="t-shirt button" data-filter="t-shirt"/>
             </li>
-            <li class="icon icon2" data-filter="pants">
-              <img src="./img/blue_p.png" alt="pants button" />
+            <li class="icon icon2" >
+              <img src="./img/blue_p.png" alt="pants button" data-filter="pants"/>
             </li>
-            <li class="icon icon3" data-filter="skirt">
-              <img src="./img/blue_s.png" alt="skirt button" />
+            <li class="icon icon3" >
+              <img src="./img/blue_s.png" alt="skirt button" data-filter="skirt"/>
             </li>
           </ul>
           
@@ -44,7 +44,7 @@
       <section id="main">
         <h3 class="hide">옷고르기</h3>
         <div class="type">
-          <ul class="t-shirt" data-type="t-shirt">
+          <ul class="t-shirt clothes" data-type="t-shirt">
             <li>
               <img src="./img/blue_t.png" alt="" />
               <span>male, large size</span>
@@ -59,7 +59,7 @@
             </li>
 
           </ul>
-          <ul class="pants" data-type="pants">
+          <ul class="pants clothes" data-type="pants">
             <li>
               <img src="./img/blue_p.png" alt="" />
               <span>male, large size</span>
@@ -73,7 +73,7 @@
               <span>female, small size</span>
             </li>
           </ul>
-          <ul class="skirt" data-type="skirt">
+          <ul class="skirt clothes" data-type="skirt">
             <li>
               <img src="./img/blue_s.png" alt="" />
               <span>female, large size</span>
@@ -89,46 +89,46 @@
           </ul>
         </div>
         <div class="color">
-          <ul class="blue-clothes" data-type="blue">
+          <ul class="blue-clothes clothes" data-type="blue">
             <li>
               <img src="./img/blue_t.png" alt="" />
-              <span>male, large szie</span>
+              <span>male, large size</span>
             </li>
             <li>
               <img src="./img/blue_p.png" alt="" />
-              <span>male, large szie</span>
+              <span>male, large size</span>
             </li>
             <li>
               <img src="./img/blue_s.png" alt="" />
-              <span>female, large szie</span>
+              <span>female, large size</span>
             </li>
           </ul>
-          <ul class="yellow-clothes" data-type="yellow"> 
+          <ul class="yellow-clothes clothes" data-type="yellow"> 
             <li>
               <img src="./img/yellow_t.png" alt="" />
-              <span>male, large szie</span>
+              <span>male, large size</span>
             </li>
             <li>
               <img src="./img/yellow_p.png" alt="" />
-              <span>male, large szie</span>
+              <span>male, large size</span>
             </li>
             <li>
               <img src="./img/yellow_s.png" alt="" />
-              <span>female, large szie</span>
+              <span>female, large size</span>
             </li>
           </ul>
-          <ul class="pink-clothes" data-type="pink">
+          <ul class="pink-clothes clothes" data-type="pink">
             <li>
               <img src="./img/pink_t.png" alt="" />
-              <span>female, small szie</span>
+              <span>female, small size</span>
             </li>
             <li>
               <img src="./img/pink_p.png" alt="" />
-              <span>female, small szie</span>
+              <span>female, small size</span>
             </li>
             <li>
               <img src="./img/pink_s.png" alt="" />
-              <span>female, large szie</span>
+              <span>female, small size</span>
             </li>
         </div>
     </div>
