--- a/index.html
+++ b/index.html
@@ -43,6 +43,46 @@
       <!-- MAIN -->
       <section id="main">
         <h3 class="hide">옷고르기</h3>
+        <!-- <div class="all">
+          <ul class="clothes">
+            <li>
+              <img src="./img/blue_t.png" alt="" />
+              <span>male, large size</span>
+            </li>
+            <li>
+              <img src="./img/yellow_t.png" alt="" />
+              <span>male, large size</span>
+            </li>
+            <li>
+              <img src="./img/pink_t.png" alt="" />
+              <span>female, small size</span>
+            </li>
+            <li>
+              <img src="./img/blue_p.png" alt="" />
+              <span>male, large size</span>
+            </li>
+            <li>
+              <img src="./img/yellow_p.png" alt="" />
+              <span>male, large size</span>
+            </li>
+            <li>
+              <img src="./img/pink_p.png" alt="" />
+              <span>female, small size</span>
+            </li>
+            <li>
+              <img src="./img/blue_s.png" alt="" />
+              <span>female, large size</span>
+            </li>
+            <li>
+              <img src="./img/yellow_s.png" alt="" />
+              <span>female, large size</span>
+            </li>
+            <li>
+              <img src="./img/pink_s.png" alt="" />
+              <span>female, small size</span>
+            </li>
+          </ul>
+        </div> -->
         <div class="type">
           <ul class="t-shirt clothes" data-type="t-shirt">
             <li>
@@ -57,7 +97,6 @@
               <img src="./img/pink_t.png" alt="" />
               <span>female, small size</span>
             </li>
-
           </ul>
           <ul class="pants clothes" data-type="pants">
             <li>
