--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <!-- MAIN -->
       <section id="main">
         <h3 class="hide">옷고르기</h3>
-        <!-- <div class="all">
-          <ul class="clothes">
+        <div class="all">
+          <ul class="clothes all">
             <li>
               <img src="./img/blue_t.png" alt="" />
               <span>male, large size</span>
@@ -82,9 +82,9 @@
               <span>female, small size</span>
             </li>
           </ul>
-        </div> -->
+        </div>
         <div class="type">
-          <ul class="t-shirt clothes" data-type="t-shirt">
+          <ul class="t-shirt clothes invisible" data-type="t-shirt">
             <li>
               <img src="./img/blue_t.png" alt="" />
               <span>male, large size</span>
@@ -98,7 +98,7 @@
               <span>female, small size</span>
             </li>
           </ul>
-          <ul class="pants clothes" data-type="pants">
+          <ul class="pants clothes invisible" data-type="pants">
             <li>
               <img src="./img/blue_p.png" alt="" />
               <span>male, large size</span>
@@ -112,7 +112,7 @@
               <span>female, small size</span>
             </li>
           </ul>
-          <ul class="skirt clothes" data-type="skirt">
+          <ul class="skirt clothes invisible" data-type="skirt">
             <li>
               <img src="./img/blue_s.png" alt="" />
               <span>female, large size</span>
@@ -128,7 +128,7 @@
           </ul>
         </div>
         <div class="color">
-          <ul class="blue-clothes clothes" data-type="blue">
+          <ul class="blue-clothes clothes invisible" data-type="blue">
             <li>
               <img src="./img/blue_t.png" alt="" />
               <span>male, large size</span>
@@ -142,7 +142,7 @@
               <span>female, large size</span>
             </li>
           </ul>
-          <ul class="yellow-clothes clothes" data-type="yellow"> 
+          <ul class="yellow-clothes clothes invisible" data-type="yellow"> 
             <li>
               <img src="./img/yellow_t.png" alt="" />
               <span>male, large size</span>
@@ -156,7 +156,7 @@
               <span>female, large size</span>
             </li>
           </ul>
-          <ul class="pink-clothes clothes" data-type="pink">
+          <ul class="pink-clothes clothes invisible" data-type="pink">
             <li>
               <img src="./img/pink_t.png" alt="" />
               <span>female, small size</span>
